maximus-platform/mailer/deploy/kubernetes/mailer-develop.yaml
---
apiVersion: v1
kind: Namespace
metadata:
 name: mailer-develop
---
apiVersion: v1
kind: Service
metadata:
  name: glusterfs-cluster
  namespace: mailer-develop
spec:
  ports:
  - port: 1
---
apiVersion: v1
kind: Endpoints
metadata:
  name: glusterfs-cluster
  namespace: mailer-develop
subsets:
  - addresses:
      - ip: 10.0.17.48
    ports:
      - port: 1
  - addresses:
      - ip: 10.0.17.49
    ports:
      - port: 1
  - addresses:
      - ip: 10.0.17.50
    ports:
      - port: 1
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: mailer
  namespace: mailer-develop
  annotations:
    prometheus.io/scrape: "false"
  labels:
    app.kubernetes.io/name: mailer
    release: develop
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mailer
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mailer
    spec:
      imagePullSecrets:
        - name: registry
      containers:
        - name: mailer
          image: registry.nefrosovet.ru/maximus-platform/mailer:develop
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
            - name: metrics
              containerPort: 9090
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: mailer
  labels:
    name: mailer
  namespace: mailer-develop
  annotations:
    prometheus.io/scrape: "false"
spec:
  ports:
  - name: http
    port: 80
  selector:
    name: mailer
---
apiVersion: v1
kind: Service
metadata:
  name: mailer-metrics
  labels:
    name: mailer
  namespace: mailer-develop
  annotations:
    prometheus.io/scrape: "true"
spec:
  ports:
  - name: metrics
    port: 9090
  selector:
    name: mailer
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: mailer
 namespace: mailer-develop
 annotations:
   prometheus.io/scrape: "false"
   ingress.kubernetes.io/rewrite-target: /
   kubernetes.io/ingress.class: nginx
spec:
 rules:
 - host: "test.maximus.lan"
   http:
     paths:
     - path: /mailer/develop
       backend:
         serviceName: mailer
         servicePort: 80
     - path: /mailer/develop/metrics
       backend:
         serviceName: mailer-metrics
         servicePort: 9090
